// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package appengine.mapper.messages;

option go_package = "mapper";

import "google/protobuf/timestamp.proto";


// State of a job or one of its shards.
enum State {
  STATE_UNSPECIFIED = 0;
  STARTING          = 1;
  RUNNING           = 2;
  ABORTING          = 3;
  SUCCESS           = 4;
  FAIL              = 5;
  ABORTED           = 6;
}


// Information about some single shard of a job.
message ShardInfo {
  int32 index  = 1;  // zero-based index of the shard
  State state  = 2;
  string error = 3;  // human readable error message, for failed shards only

  google.protobuf.Timestamp created = 4;  // when it was created
  google.protobuf.Timestamp updated = 5;  // when it was updated last time
  google.protobuf.Timestamp eta     = 6;  // when it finishes (if tracking progress)

  int64 processed_entities = 7;  // number of processed entities thus far
  int64 total_entities     = 8;  // total number of entities or -1 if unknown
  float entities_per_sec   = 9;  // rate of processing, entities per second
}


// Information about a job.
message JobInfo {
  int64 id    = 1;  // unique job identifier
  State state = 2;  // overall state of the job

  google.protobuf.Timestamp created = 3;  // when it was created
  google.protobuf.Timestamp updated = 4;  // when it was updated last time
  google.protobuf.Timestamp eta     = 5;  // when it finishes (if tracking progress)

  int64 processed_entities = 6;  // number of processed entities thus far
  int64 total_entities     = 7;  // total number of entities or -1 if unknown
  float entities_per_sec   = 8;  // rate of processing, entities per second

  repeated ShardInfo shards = 20;  // state of all job's shards
}
